k8s/client-concrete-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-concrete-deployment
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      component: web-concrete
  template:
    metadata:
      labels:
        component: web-concrete
    spec:
      nodeSelector:
        doks.digitalocean.com/node-pool: default-pool
      containers:
        - name: client
          image: itsdevin/bow-mark-concrete-client:$COMMIT_SHA1
          resources:
            requests:
              cpu: "250m"
              memory: "500Mi"
            limits:
              cpu: "1000m"
              memory: "2000Mi"
          ports:
            - containerPort: 3001
