k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      nodeSelector:
        doks.digitalocean.com/node-pool: default-pool
      containers:
        - name: client
          image: itsdevin/bow-mark-client:$COMMIT_SHA1
          resources:
            requests:
              cpu: "250m"
              memory: "500Mi"
            limits:
              cpu: "1000m"
              memory: "2000Mi"
          ports:
            - containerPort: 3000
