k8s/consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      component: consumer
  template:
    metadata:
      labels:
        component: consumer
    spec:
      nodeSelector:
        doks.digitalocean.com/node-pool: default-pool
      containers:
        - name: consumer
          image: itsdevin/bow-mark-server:$COMMIT_SHA1
          command: ["node", "dist/consumer/index.js"]
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: migrations
          configMap:
            name: pg-migrations
