k8s/mcp-server-concrete-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-analytics-concrete-deployment
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  replicas: 1
  selector:
    matchLabels:
      component: mcp-analytics-concrete
  template:
    metadata:
      labels:
        component: mcp-analytics-concrete
    spec:
      nodeSelector:
        doks.digitalocean.com/node-pool: dedicated-cpu-optimized
      containers:
        - name: mcp-analytics-concrete
          image: itsdevin/bow-mark-server:$COMMIT_SHA1
          command: ["node", "dist/mcp-server.js"]
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1024Mi"
