k8s/server-concrete-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-concrete-deployment
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  replicas: 2
  selector:
    matchLabels:
      component: server-concrete
  template:
    metadata:
      labels:
        component: server-concrete
    spec:
      nodeSelector:
        doks.digitalocean.com/node-pool: dedicated-cpu-optimized
      containers:
        - name: server
          image: itsdevin/bow-mark-server:$COMMIT_SHA1
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "1000m"
              memory: "2000Mi"
            limits:
              cpu: "2000m"
              memory: "4000Mi"
