k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # Tell Kubernetes to make an Ingress controller based on the Nginx project
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # Configure how our copy of Nginx behaves
    nginx.ingress.kubernetes.io/use-regex: "true"
    # Removes '/api' from request
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    # Configure allowable body size
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
# Define our nginx routing
spec:
  tls:
    - hosts:
        - app.bowmark.ca
        - paving.bowmark.ca
        - concrete.bowmark.ca
      secretName: bow-mark-tls
  rules:
    - host: app.bowmark.ca
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /graphql/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 8080
          - path: /file/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 8080
          - path: /public/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 8080
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 8080
    - host: paving.bowmark.ca
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /graphql/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 8080
          - path: /file/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 8080
          - path: /public/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 8080
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 8080
    - host: concrete.bowmark.ca
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-concrete-cluster-ip-service
                port:
                  number: 3001
          - path: /graphql/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-concrete-cluster-ip-service
                port:
                  number: 8081
          - path: /file/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-concrete-cluster-ip-service
                port:
                  number: 8080
          - path: /public/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-concrete-cluster-ip-service
                port:
                  number: 8081
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-concrete-cluster-ip-service
                port:
                  number: 8081
